# Barcode-Detector-GPGPU

./: README.md
cpu/: CMakeLists.txt
cpu/src/: CMakeLists.txt  main.cc
cpu/src/benchmark/: Bench.cc  Bench.hh
cpu/src/image/: image.cc  image.hh  matrix.cc  matrix.hh  splice.hh
cpu/src/kmeans/: KmeansTransform.hh
cpu/src/lbp/: lbp.cc  lbp.hh  lbpSplices.cc  lbpSplices.hh
cuda/: .gitignore  CMakeLists.txt  README.md
cuda/bench/: CMakeLists.txt  bench.cc
cuda/res/: kmeans.database
cuda/src/: CMakeLists.txt  entryPoint.cc  entryPoint.hh  main.cc  main.hh
cuda/src/cuda/: mycuda.hh
cuda/src/image/: matrix.cu  matrix.hh  splice.cu  splice.hh
cuda/src/kmeans/: KmeansTransform.cc  KmeansTransform.hh  kmeansTransformGpu.cu  kmeansTransformGpu.hh
cuda/src/knn/: knnCpu.cc  knnCpu.hh  knnGpu.cu  knnGpu.hh
cuda/src/lbp/: lbp.cc  lbp.hh  lbpAlgorithm.hh  lbpCpu.cc  lbpCpu.hh  lbpGpu.cu  lbpGpu.hh  lbpGpuKnn.cu  lbpGpuKnn.hh  lbpSplices.cu  lbpSplices.hh
cuda/src/my_opencv/: wrapper.cc  wrapper.hh
python/: kmeans.database  prototypage.ipynb
python/.ipynb_checkpoints/: prototypage-checkpoint.ipynb
